--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,14 @@ html {
 	position: relative;
 	min-height: 100%;
 	padding-top: 60px;
+	width: 100%;
 }
 body {
 	font-family: 'Open Sans',Arial,Helvetica,sans-serif;
 	margin: 0;
 	margin-bottom: 80px;
 	background-color: #dddddd;
+	width: 100%;
 	/*margin-top: 60px;*/
 }
 
@@ -60,7 +62,7 @@ hr {
 .newsletter {
 	padding: 10px;
 	background-color: #444;
-	background-image: url('https://unsplash.it/g/1920/300?random');
+	/*background-image: url('https://unsplash.it/g/1920/300?random');*/
 	color: #fff;
 }
 .newsletter h2 {
