--- a/css/navigation-bar.css
+++ b/css/navigation-bar.css
@@ -7,6 +7,7 @@ nav {
   font-size: 110%;
   /*box-shadow: 0px 2px 15px #2B2B2B;*/
   top: 0px;
+  width: 100%;
 }
 nav ul {
   list-style: none;
@@ -98,7 +99,7 @@ nav header i {
   padding-bottom: 1rem;
   height: 100%;
   width: 30%;
-  transform: translate(-100%,0%);
+  transform: translate(-105%,0%); /*not using 100% because options were clickable if user hovered to the very left side of window*/
   transition: transform 0.4s;
   z-index: 100;/* this is required so that it stays above navbar wrapper*/
   overflow-y: auto;
