--- a/css/recipes.css
+++ b/css/recipes.css
@@ -20,6 +20,8 @@ html {
 
 }
 .ed-choice-sec .desc-box {
+	display: flex;
+	flex-direction: column;
 	width: 50%;
 	height: 50%;
 	color: #fff;
@@ -30,10 +32,13 @@ html {
 	text-align: center;
 	z-index: 2;
 	box-shadow: 0 2px 10px black;
-	padding: 1rem 1.5rem;
+	padding: 1rem 0.5rem;
 }
-.ed-choice-sec .desc-box .heading {
+.ed-choice-sec .desc-box .heading-section {
 	position: relative;
+	flex: 2;
+}
+.heading-content-wrapper {
 	display: inline-block;
 }
 .ed-choice-sec h1 {
@@ -52,7 +57,11 @@ html {
 	color: #3592FB;
 	font-weight: lighter;
 }
-.ed-choice-sec p {
+.ed-choice-sec .desc-section {
+	flex: 1;
 	font-size: 100%;
+	margin: 0;
 }
-
+.ed-choice-sec .btn-section {
+	flex: 1;
+}
